fixed clipping issues on mobile display

--- a/styles.css
+++ b/styles.css
@@ -18,16 +18,16 @@
   padding: 0;
   font-size: 10px;
 }
-body,
-html {
+body {
   background-color: var(--background);
-  margin: clamp(5rem, 20vh, 6rem) 0 0;
 }
 h1 {
   font-family: "Pokemon Solid";
   font-size: var(--titleSize);
   text-align: center;
   color: #ffcc00;
+
+  margin: clamp(5rem, 20vh, 6rem) 0 0;
 
   -webkit-text-stroke: 2px #003a70;
   letter-spacing: 14px;
